--- a/Desafio/Desafio.csproj
+++ b/Desafio/Desafio.csproj
@@ -62,9 +62,11 @@
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\EnderecoEntrega.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Pagamento.cs" />
     <Compile Include="ViewModels\ClienteVM.cs" />
     <Compile Include="ViewModels\EnderecoVM.cs" />
     <Compile Include="ViewModels\ItemVM.cs" />
+    <Compile Include="ViewModels\PagamentoVM.cs" />
     <Compile Include="ViewModels\PedidoVM.cs" />
     <Compile Include="ViewModels\PropertyChange.cs" />
     <Compile Include="ViewModels\UcPedidoVM.cs" />
@@ -80,6 +82,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\Button.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\DataGrid.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\HeaderDataGrid.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\TextBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\PedidoCompleto.cs" />
@@ -109,5 +127,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
